fix word wrapping

--- a/src/ChangeBlog.Management.Api/ClientApp/src/styles.scss
+++ b/src/ChangeBlog.Management.Api/ClientApp/src/styles.scss
@@ -37,6 +37,10 @@ app-header span, p {
   text-overflow: ellipsis;
 }
 
+.break-word {
+  word-break: break-word;
+}
+
 @media (max-width: $md) {
   .app-content-container {
     margin-left: 0.5rem;
